<resources>
    <string name="app_name">TestApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_course">Add Course</string>
    <string name="delete_course">Delete course</string>
    <string name="delete_all_courses">Delete all courses</string>
    <string name="get_all_courses">GET All Courses</string>
    <string name="update_last_course">update last course</string>
</resources>